trying to fix buttons looking white on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,7 @@ form textarea:focus {
 }
 
 form button {
+  color:#000000;
   border:1.5px solid;
   border-radius:5px;
   padding:5px 10px;
